--- a/style.html
+++ b/style.html
@@ -1,6 +1,10 @@
-
+<!DOCTYPE html>
 <html>
 
+<head>
+  <title>Css External style sheet </title>
+  <link rel="stylesheet" type="text/css" href= "style.css">
+</head>
 <body>
 
 <h1>All about Kpop</h1>
