--- a/plain.html
+++ b/plain.html
@@ -33,6 +33,8 @@ interested in their music. BTS and other K-pop groups are only growing in popula
 and music genres. Absolutely amazing.</p>
 
 <a href="https://kprofiles.com/loona-members-profile/"> LOONA!</a>
+  
+<a href="https://famousmrchair.github.io/web/style.html/"> styled website </a>
 
 </body>
 </html>
