--- a/style.html
+++ b/style.html
@@ -38,6 +38,9 @@ interested in their music. BTS and other K-pop groups are only growing in popula
 and music genres. Absolutely amazing.</p>
 
 <a href="https://kprofiles.com/loona-members-profile/"> LOONA!</a>
+  
+  
+<a href="https://famousmrchair.github.io/web/plain.html/"> plain website </a>
 
 </body>
 </html>
