--- a/style.html
+++ b/style.html
@@ -2,12 +2,11 @@
 <html>
 
 <head>
-  <title>Css External style sheet </title>
-  <link rel="stylesheet" type="text/css" href= "style.css">
+  <title>All About Kpop </title>
+  <link rel="stylesheet" href= "style.css">
 </head>
 <body>
 
-<h1>All about Kpop</h1>
 <h2>By Kevin Xiao </h2>
 
 <h2>Table of Contents</h2>
