--- a/plain.html
+++ b/plain.html
@@ -34,7 +34,7 @@ and music genres. Absolutely amazing.</p>
 
 <a href="https://kprofiles.com/loona-members-profile/"> LOONA!</a>
   
-<a href="https://famousmrchair.github.io/web/style.html/"> styled website </a>
+<a href="https://famousmrchair.github.io/web/style.html"> styled website </a>
 
 </body>
 </html>
