--- a/style.html
+++ b/style.html
@@ -40,7 +40,7 @@ and music genres. Absolutely amazing.</p>
 
 <a href="https://kprofiles.com/loona-members-profile/"> LOONA!</a>
   
-<a href="https://famousmrchair.github.io/web/plain.html/"> plain website </a>
+<a href="https://famousmrchair.github.io/web/plain.html"> plain website </a>
 
 </body>
 </html>
