Update and rename BTS to bts.html

--- a/bts.html
+++ b/bts.html
@@ -12,10 +12,10 @@
             <nav>
                 <ul>
                     <li><a href="https://famousmrchair.github.io/web/site.html">Home</a></li>
-                    <li><a href="https://famousmrchair.github.io/web/about.html#">About</a></li>
-                    <li><a href="https://famousmrchair.github.io/web/BTS.html#">BTS</a></li>
-                    <li><a href="https://famousmrchair.github.io/web/Other.html#">Other Groups</a></li>
-                    <li><a href="https://famousmrchair.github.io/web/Reason.html#">So What?</a></li>
+                    <li><a href="https://famousmrchair.github.io/web/about.html">About</a></li>
+                    <li><a href="https://famousmrchair.github.io/web/bts.html">BTS</a></li>
+                    <li><a href="https://famousmrchair.github.io/web/other.html">Other Groups</a></li>
+                    <li><a href="https://famousmrchair.github.io/web/reason.html">So What?</a></li>
                 </ul>
             </nav>
         </div>
