--- a/about.html
+++ b/about.html
@@ -21,9 +21,12 @@
         </div>
       </header>
         <h1></h1>
-        <p K-pop is a new genre of music that grew in popularity starting in the early 2010s, 
-        and then becoming a world phenomenon later on. K-pop stands for korean pop, but also 
-        covers a variety of range of music, from rap to classical music.  </p>
+        <div> K-pop is a new genre of music that grew in popularity starting in the early 2010s, 
+        and then becoming a world phenomenon later on. K-pop is a genre of popular music originating in South Korea.
+        It is influenced by styles and genres from around the world, such as experimental, rock, jazz, gospel, hip hop,
+        R&B, reggae, electronic dance, folk, country, and classical on top of its traditional Korean music roots. This music genre
+        has taken the world by storm and has received a massive following of both foreign and domestic fans, and I am personally a
+        huge fan of the genre as well.  </div>
 
 
     </body>
