--- a/bts.html
+++ b/bts.html
@@ -20,5 +20,12 @@
         </div>
       </header>
       
+                <div class="bts">
+            <h3> The Kings of K-Pop </h3>
+            <p> BTS is a seven person boy band hailing from South Korea, debuting on June 13th, 2013 under Big Hit Entertainment.
+            They are now the kpop group with the greatest number of fans, or people known as "armies," the nickname given to 
+            BTS's fans. There are over 160 million armies and the current count is still growing as more and more people discover
+            BTS and their wide variety of music. BTS has been dominating the music industry of the world, reaching top 100 on billboards
+                multiple times and even received Artist of the Year at the Melon Music Awards. </p>
     </body>
 </html>
