--- a/bts.html
+++ b/bts.html
@@ -27,5 +27,6 @@
             BTS's fans. There are over 160 million armies and the current count is still growing as more and more people discover
             BTS and their wide variety of music. BTS has been dominating the music industry of the world, reaching top 100 on billboards
                 multiple times and even received Artist of the Year at the Melon Music Awards. </p>
+        </div>
     </body>
 </html>
