--- a/bts.html
+++ b/bts.html
@@ -28,5 +28,13 @@
             BTS and their wide variety of music. BTS has been dominating the music industry of the world, reaching top 100 on billboards
                 multiple times and even received Artist of the Year at the Melon Music Awards. </p>
         </div>
+        <div class="btsbias">
+            <h3> My bias </h3>
+            <p>My bias, or favorite creator, in BTS is Jungkook, and he is known as the "Golden Maknae," maknae being a korean title that is given to the youngest person in a group.
+            I believe that he has the best visuals out of everyone in the group, as well as the most talent in singing. His vocal range is absolutely
+            insane and can hit insanely high soprano notes while also being able to sing tenor and bass perfectly. In addition, his dancing ability is
+            remarkable as he spends a countless amount of time practicing the choreographies for BTS's stage performances. He has all the perfect traits an idol
+            should have, while also having a humble and goofy personality that anyone could aspire to be. </p>
+        </div>
     </body>
 </html>
