--- a/bts.html
+++ b/bts.html
@@ -35,6 +35,7 @@
             insane and can hit insanely high soprano notes while also being able to sing tenor and bass perfectly. In addition, his dancing ability is
             remarkable as he spends a countless amount of time practicing the choreographies for BTS's stage performances. He has all the perfect traits an idol
             should have, while also having a humble and goofy personality that anyone could aspire to be. </p>
+            <img src="jungkook.jpg" alt="jungkook" width="500" height="333">
         </div>
     </body>
 </html>
