--- a/bts.html
+++ b/bts.html
@@ -27,7 +27,7 @@
             BTS's fans. There are over 160 million armies and the current count is still growing as more and more people discover
             BTS and their wide variety of music. BTS has been dominating the music industry of the world, reaching top 100 on billboards
                 multiple times and even received Artist of the Year at the Melon Music Awards. </p>
-                    <img src="BTSgroup.jpg" alt="BTSgroup" width="500" height="333">
+                    <img src="https://www.insideedition.com/sites/default/files/images/2018-08/082318-bts-1280x7120.jpg" alt="BTSgroup" width="500" height="333">
         </div>
         <div class="btsbias">
             <h3> My bias </h3>
@@ -36,7 +36,7 @@
             insane and can hit insanely high soprano notes while also being able to sing tenor and bass perfectly. In addition, his dancing ability is
             remarkable as he spends a countless amount of time practicing the choreographies for BTS's stage performances. He has all the perfect traits an idol
             should have, while also having a humble and goofy personality that anyone could aspire to be. </p>
-            <img src="jungkook.jpg" alt="jungkook" width="500" height="333">
+            <img src="https://pbs.twimg.com/media/DVtCbigW4AAHSJu.jpg.jpg" alt="jungkook" width="500" height="333">
         </div>
     </body>
 </html>
