--- a/about.html
+++ b/about.html
@@ -28,6 +28,8 @@
         R&B, reggae, electronic dance, folk, country, and classical on top of its traditional Korean music roots. This music genre
         has taken the world by storm and has received a massive following of both foreign and domestic fans, and I am personally a
         huge fan of the genre as well. </p>
+            <a href="https://www.90daykorean.com/what-is-kpop/">More info on kpop</a>
+            <img src="http://seangtkelley.me/img/blog/2019-08-04-stage-mix-gen/stage-nosebleeds.jpg" alt="KPOPSTAGE" width="500" height="333">
         </div>
 
 
