--- a/polynomial.html
+++ b/polynomial.html
@@ -4,17 +4,80 @@
         <h1> My Favorite Polynomial</h1>
         <p> Hello there! Before today, I have never had a "favorite" polynomial, but then Mr. Konstantinovich made a homework assignment that forced us to think about
         a polynomial that is our "favorite," and so I just made up a random 4 term polynomial! This is the polynomial that got lucky enough to be chosen by me :D </p>
-        def makePolyTable(s,n):
-           Table3 = "\n\t<table>\n\t\t<tr><th>x</th><th>y=4x^3+2x^2+7x+20</th></tr>"
-           x = s
-           while x <= n:
-               Table3 = Table3 + "\n\t\t<tr><td>" + str(x) + "</td><td>" + str((3*(x ** 3)) + (2*(x ** 2)) + (7*x) + 20) + "</td></tr>"
-               x += 1
-               Table3 = Table3 + "\n\t</table>\n"
-           print(Table3)
-     
-
-         print (makePolyTable (-2,5))
+        <table>
+		<tr><th>x</th><th>y=4x^3+2x^2+7x+20</th></tr>
+		<tr><td>-20</td><td>-23320</td></tr>
+		<tr><td>-19</td><td>-19968</td></tr>
+		<tr><td>-18</td><td>-16954</td></tr>
+		<tr><td>-17</td><td>-14260</td></tr>
+		<tr><td>-16</td><td>-11868</td></tr>
+		<tr><td>-15</td><td>-9760</td></tr>
+		<tr><td>-14</td><td>-7918</td></tr>
+		<tr><td>-13</td><td>-6324</td></tr>
+		<tr><td>-12</td><td>-4960</td></tr>
+		<tr><td>-11</td><td>-3808</td></tr>
+		<tr><td>-10</td><td>-2850</td></tr>
+		<tr><td>-9</td><td>-2068</td></tr>
+		<tr><td>-8</td><td>-1444</td></tr>
+		<tr><td>-7</td><td>-960</td></tr>
+		<tr><td>-6</td><td>-598</td></tr>
+		<tr><td>-5</td><td>-340</td></tr>
+		<tr><td>-4</td><td>-168</td></tr>
+		<tr><td>-3</td><td>-64</td></tr>
+		<tr><td>-2</td><td>-10</td></tr>
+		<tr><td>-1</td><td>12</td></tr>
+		<tr><td>0</td><td>20</td></tr>
+		<tr><td>1</td><td>32</td></tr>
+		<tr><td>2</td><td>66</td></tr>
+		<tr><td>3</td><td>140</td></tr>
+		<tr><td>4</td><td>272</td></tr>
+		<tr><td>5</td><td>480</td></tr>
+		<tr><td>6</td><td>782</td></tr>
+		<tr><td>7</td><td>1196</td></tr>
+		<tr><td>8</td><td>1740</td></tr>
+		<tr><td>9</td><td>2432</td></tr>
+		<tr><td>10</td><td>3290</td></tr>
+		<tr><td>11</td><td>4332</td></tr>
+		<tr><td>12</td><td>5576</td></tr>
+		<tr><td>13</td><td>7040</td></tr>
+		<tr><td>14</td><td>8742</td></tr>
+		<tr><td>15</td><td>10700</td></tr>
+		<tr><td>16</td><td>12932</td></tr>
+		<tr><td>17</td><td>15456</td></tr>
+		<tr><td>18</td><td>18290</td></tr>
+		<tr><td>19</td><td>21452</td></tr>
+		<tr><td>20</td><td>24960</td></tr>
+		<tr><td>21</td><td>28832</td></tr>
+		<tr><td>22</td><td>33086</td></tr>
+		<tr><td>23</td><td>37740</td></tr>
+		<tr><td>24</td><td>42812</td></tr>
+		<tr><td>25</td><td>48320</td></tr>
+		<tr><td>26</td><td>54282</td></tr>
+		<tr><td>27</td><td>60716</td></tr>
+		<tr><td>28</td><td>67640</td></tr>
+		<tr><td>29</td><td>75072</td></tr>
+		<tr><td>30</td><td>83030</td></tr>
+		<tr><td>31</td><td>91532</td></tr>
+		<tr><td>32</td><td>100596</td></tr>
+		<tr><td>33</td><td>110240</td></tr>
+		<tr><td>34</td><td>120482</td></tr>
+		<tr><td>35</td><td>131340</td></tr>
+		<tr><td>36</td><td>142832</td></tr>
+		<tr><td>37</td><td>154976</td></tr>
+		<tr><td>38</td><td>167790</td></tr>
+		<tr><td>39</td><td>181292</td></tr>
+		<tr><td>40</td><td>195500</td></tr>
+		<tr><td>41</td><td>210432</td></tr>
+		<tr><td>42</td><td>226106</td></tr>
+		<tr><td>43</td><td>242540</td></tr>
+		<tr><td>44</td><td>259752</td></tr>
+		<tr><td>45</td><td>277760</td></tr>
+		<tr><td>46</td><td>296582</td></tr>
+		<tr><td>47</td><td>316236</td></tr>
+		<tr><td>48</td><td>336740</td></tr>
+		<tr><td>49</td><td>358112</td></tr>
+		<tr><td>50</td><td>380370</td></tr>
+	</table>
     </body>
 
 </html>
