--- a/SATscores.html
+++ b/SATscores.html
@@ -2,8 +2,8 @@
 <head>
 <style>
 table {
-   border: 3px black;
-   margin: 1 px
+   border: 3px solid purple;
+   width: 100%
 }
 td {
    font-size: 12px;
