--- a/pokedex.html
+++ b/pokedex.html
@@ -13,9 +13,8 @@
         font-size: 12px;
         border-width: 3px;
       }
-      body {background-color: black;}
-      h1 {color: white;}
-      p {color: white;}
+      h1 {color: pink; font-size: 30px;}
+      p {color: gray;}
     </style>
   </head>
   <body>
