--- a/pokedex.html
+++ b/pokedex.html
@@ -2461,7 +2461,7 @@
     game is pretty bad but lots of people enjoy it so to each their own. I personally
     enjoy much more epic games such as Minecraft bedwars and Overwatch, both very pogchamp games.
     Also I just realized I have used lots of twitchspeak in this assignment and I have now come to realize truly
-    how much of a degenerate I am. It's 3 am and I spent 5 hours on this assignent. I really need sleep. Anyways,
+    how much of a degenerate I am. It's 3 am and I spent 5 hours on this assignment. I really need sleep. Anyways,
     have a nice day :) </p>
   </body>
 </html>
