--- a/pokedex.html
+++ b/pokedex.html
@@ -21,7 +21,7 @@
   <h1> WOW! VERY EPIC POKEMON TABLE OF STATS FOR POKEMON NERDS! VERY POGU NICE!! </h1>
   <table> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/0.png><img src= Downloads/pokemon/img/front/0.png></td>
+    <td><img src= "img//back/0.png>"<img src= "img//front/0.png>"</td>
     <td>#</td>
     <td>Name</td>
     <td>Type 1</td>
@@ -37,7 +37,7 @@
     <td>Legendary</td>
   </tr> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/1.png><img src= Downloads/pokemon/img/front/1.png></td>
+    <td><img src= "img//back/1.png>"<img src= "img//front/1.png>"</td>
     <td>1</td>
     <td>Bulbasaur</td>
     <td>Grass</td>
@@ -53,7 +53,7 @@
     <td>False</td>
   </tr> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/2.png><img src= Downloads/pokemon/img/front/2.png></td>
+    <td><img src= "img//back/2.png>"<img src= "img//front/2.png>"</td>
     <td>2</td>
     <td>Ivysaur</td>
     <td>Grass</td>
@@ -69,7 +69,7 @@
     <td>False</td>
   </tr> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/3.png><img src= Downloads/pokemon/img/front/3.png></td>
+    <td><img src= "img//back/3.png>"<img src= "img//front/3.png>"</td>
     <td>3</td>
     <td>Venusaur</td>
     <td>Grass</td>
@@ -85,7 +85,7 @@
     <td>False</td>
   </tr> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/4.png><img src= Downloads/pokemon/img/front/4.png></td>
+    <td><img src= "img//back/4.png>"<img src= "img//front/4.png>"</td>
     <td>4</td>
     <td>Charmander</td>
     <td>Fire</td>
@@ -101,7 +101,7 @@
     <td>False</td>
   </tr> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/5.png><img src= Downloads/pokemon/img/front/5.png></td>
+    <td><img src= "img//back/5.png>"<img src= "img//front/5.png>"</td>
     <td>5</td>
     <td>Charmeleon</td>
     <td>Fire</td>
@@ -117,7 +117,7 @@
     <td>False</td>
   </tr> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/6.png><img src= Downloads/pokemon/img/front/6.png></td>
+    <td><img src= "img//back/6.png>"<img src= "img//front/6.png>"</td>
     <td>6</td>
     <td>Charizard</td>
     <td>Fire</td>
@@ -133,7 +133,7 @@
     <td>False</td>
   </tr> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/7.png><img src= Downloads/pokemon/img/front/7.png></td>
+    <td><img src= "img//back/7.png>"<img src= "img//front/7.png>"</td>
     <td>7</td>
     <td>Squirtle</td>
     <td>Water</td>
@@ -149,7 +149,7 @@
     <td>False</td>
   </tr> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/8.png><img src= Downloads/pokemon/img/front/8.png></td>
+    <td><img src= "img//back/8.png>"<img src= "img//front/8.png>"</td>
     <td>8</td>
     <td>Wartortle</td>
     <td>Water</td>
@@ -165,7 +165,7 @@
     <td>False</td>
   </tr> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/9.png><img src= Downloads/pokemon/img/front/9.png></td>
+    <td><img src= "img//back/9.png>"<img src= "img//front/9.png>"</td>
     <td>9</td>
     <td>Blastoise</td>
     <td>Water</td>
@@ -181,7 +181,7 @@
     <td>False</td>
   </tr> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/10.png><img src= Downloads/pokemon/img/front/10.png></td>
+    <td><img src= "img//back/10.png>"<img src= "img//front/10.png>"</td>
     <td>10</td>
     <td>Caterpie</td>
     <td>Bug</td>
@@ -197,7 +197,7 @@
     <td>False</td>
   </tr> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/11.png><img src= Downloads/pokemon/img/front/11.png></td>
+    <td><img src= "img//back/11.png>"<img src= "img//front/11.png>"</td>
     <td>11</td>
     <td>Metapod</td>
     <td>Bug</td>
@@ -213,7 +213,7 @@
     <td>False</td>
   </tr> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/12.png><img src= Downloads/pokemon/img/front/12.png></td>
+    <td><img src= "img//back/12.png>"<img src= "img//front/12.png>"</td>
     <td>12</td>
     <td>Butterfree</td>
     <td>Bug</td>
@@ -229,7 +229,7 @@
     <td>False</td>
   </tr> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/13.png><img src= Downloads/pokemon/img/front/13.png></td>
+    <td><img src= "img//back/13.png>"<img src= "img//front/13.png>"</td>
     <td>13</td>
     <td>Weedle</td>
     <td>Bug</td>
@@ -245,7 +245,7 @@
     <td>False</td>
   </tr> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/14.png><img src= Downloads/pokemon/img/front/14.png></td>
+    <td><img src= "img//back/14.png>"<img src= "img//front/14.png>"</td>
     <td>14</td>
     <td>Kakuna</td>
     <td>Bug</td>
@@ -261,7 +261,7 @@
     <td>False</td>
   </tr> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/15.png><img src= Downloads/pokemon/img/front/15.png></td>
+    <td><img src= "img//back/15.png>"<img src= "img//front/15.png>"</td>
     <td>15</td>
     <td>Beedrill</td>
     <td>Bug</td>
@@ -277,7 +277,7 @@
     <td>False</td>
   </tr> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/16.png><img src= Downloads/pokemon/img/front/16.png></td>
+    <td><img src= "img//back/16.png>"<img src= "img//front/16.png>"</td>
     <td>16</td>
     <td>Pidgey</td>
     <td>Normal</td>
@@ -293,7 +293,7 @@
     <td>False</td>
   </tr> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/17.png><img src= Downloads/pokemon/img/front/17.png></td>
+    <td><img src= "img//back/17.png>"<img src= "img//front/17.png>"</td>
     <td>17</td>
     <td>Pidgeotto</td>
     <td>Normal</td>
@@ -309,7 +309,7 @@
     <td>False</td>
   </tr> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/18.png><img src= Downloads/pokemon/img/front/18.png></td>
+    <td><img src= "img//back/18.png>"<img src= "img//front/18.png>"</td>
     <td>18</td>
     <td>Pidgeot</td>
     <td>Normal</td>
@@ -325,7 +325,7 @@
     <td>False</td>
   </tr> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/19.png><img src= Downloads/pokemon/img/front/19.png></td>
+    <td><img src= "img//back/19.png>"<img src= "img//front/19.png>"</td>
     <td>19</td>
     <td>Rattata</td>
     <td>Normal</td>
@@ -341,7 +341,7 @@
     <td>False</td>
   </tr> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/20.png><img src= Downloads/pokemon/img/front/20.png></td>
+    <td><img src= "img//back/20.png>"<img src= "img//front/20.png>"</td>
     <td>20</td>
     <td>Raticate</td>
     <td>Normal</td>
@@ -357,7 +357,7 @@
     <td>False</td>
   </tr> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/21.png><img src= Downloads/pokemon/img/front/21.png></td>
+    <td><img src= "img//back/21.png>"<img src= "img//front/21.png>"</td>
     <td>21</td>
     <td>Spearow</td>
     <td>Normal</td>
@@ -373,7 +373,7 @@
     <td>False</td>
   </tr> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/22.png><img src= Downloads/pokemon/img/front/22.png></td>
+    <td><img src= "img//back/22.png>"<img src= "img//front/22.png>"</td>
     <td>22</td>
     <td>Fearow</td>
     <td>Normal</td>
@@ -389,7 +389,7 @@
     <td>False</td>
   </tr> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/23.png><img src= Downloads/pokemon/img/front/23.png></td>
+    <td><img src= "img//back/23.png>"<img src= "img//front/23.png>"</td>
     <td>23</td>
     <td>Ekans</td>
     <td>Poison</td>
@@ -405,7 +405,7 @@
     <td>False</td>
   </tr> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/24.png><img src= Downloads/pokemon/img/front/24.png></td>
+    <td><img src= "img//back/24.png>"<img src= "img//front/24.png>"</td>
     <td>24</td>
     <td>Arbok</td>
     <td>Poison</td>
@@ -421,7 +421,7 @@
     <td>False</td>
   </tr> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/25.png><img src= Downloads/pokemon/img/front/25.png></td>
+    <td><img src= "img//back/25.png>"<img src= "img//front/25.png>"</td>
     <td>25</td>
     <td>Pikachu</td>
     <td>Electric</td>
@@ -437,7 +437,7 @@
     <td>False</td>
   </tr> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/26.png><img src= Downloads/pokemon/img/front/26.png></td>
+    <td><img src= "img//back/26.png>"<img src= "img//front/26.png>"</td>
     <td>26</td>
     <td>Raichu</td>
     <td>Electric</td>
@@ -453,7 +453,7 @@
     <td>False</td>
   </tr> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/27.png><img src= Downloads/pokemon/img/front/27.png></td>
+    <td><img src= "img//back/27.png>"<img src= "img//front/27.png>"</td>
     <td>27</td>
     <td>Sandshrew</td>
     <td>Ground</td>
@@ -469,7 +469,7 @@
     <td>False</td>
   </tr> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/28.png><img src= Downloads/pokemon/img/front/28.png></td>
+    <td><img src= "img//back/28.png>"<img src= "img//front/28.png>"</td>
     <td>28</td>
     <td>Sandslash</td>
     <td>Ground</td>
@@ -485,7 +485,7 @@
     <td>False</td>
   </tr> 
   <tr> 
-    <td><img src= Downloads/pokemon/img/back/29.png><img src= Downloads/pokemon/img/front/29.png></td>
+    <td><img src= "img//back/29.png>"<img src= "img//front/29.png>"</td>
     <td>29</td>
     <td>Nidoran♀</td>
     <td>Poison</td>
@@ -499,7 +499,7 @@
     <td>41</td>
     <td>1</td>
     <td>False</td>
-  </tr>
+  </tr> 
   <tr> 
     <td><img src= Downloads/pokemon/img/back/30.png><img src= Downloads/pokemon/img/front/30.png></td>
     <td>30</td>
